[metadata]
license = MIT
license_file = LICENSE

[bdist_rpm]
doc_files = LICENSE
            docs/

[build_sphinx]
source-dir = docs/source
build-dir = build/sphinx

[upload_sphinx]
upload-dir = build/sphinx/html

[wheel]
universal = 1

[pycodestyle]
max-line-length = 140
ignore = E402,E731,W504
exclude = .git,__pycache__,.tox,docs,tests,build,dist,examples
